# diplom_ui

./: .gitignore  README.md  pyproject.toml
litres/models/: app.py
litres/models/controls/: checkbox.py
litres/models/data/: data_genre.py  data_home_page.py  data_my_books.py  data_rmd_search.py
litres/models/pages/: book_page.py  genre.py  home_page.py  login.py  login_page.py  my_books_page.py  rmd_search_page.py
tests/: conftest.py  test_litres.py
